--- a/db/src/main/resources/application.yml
+++ b/db/src/main/resources/application.yml
@@ -5,8 +5,8 @@ server:
 spring:
   datasource:
     url: jdbc:mysql://remotemysql.com:3306/Rn6mm1eIfC?useSSL=false
-    username: !secret username
-    password: !secret password
+    username: username
+    password: password
     driver-class-name: com.mysql.jdbc.Driver
   jpa:
     show-sql: true
